scripts/2_psql_db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: moodle
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1001
      containers:
      - name: postgres
        image: bitnami/postgresql:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: postgresql
        volumeMounts:
        - mountPath: /bitnami/postgresql
          name: postgres-storage
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -U bn_moodle
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -U bn_moodle
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: moodle
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgresql
  selector:
    app: postgres
